# repoatlas

./: .asif-ci  .gitignore  CHANGELOG.md  CLAUDE.md  GTM-PLAN.md  LICENSE  PUBLISH.md  README.md  pyproject.toml
.asif/: NEXUS.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release-protocol-check.yml  release.yml  security-scan.yml  stale.yml
atlas/: __main__.py  cli.py  config.py  connections.py  detector.py  display.py  export_report.py  health.py  history.py  license_manager.py  models.py  recommendations.py  scanner.py
demo/: demo-commands.sh  demo.cast  demo.tape  record.sh
launch/: launch-checklist.md  product-hunt.md  reddit.md  show-hn.md  twitter.md
launch-content/: devto-article-1.md  devto-article-2.md  linkedin-post.md  reddit-commandline.md  reddit-devops.md  reddit-python.md  show-hn.md  twitter-thread.md
tests/: conftest.py  test_ai_tools.py  test_cli.py  test_config.py  test_connections.py  test_detector.py  test_display.py  test_export.py  test_health.py  test_history.py  test_infrastructure.py  test_license_manager.py  test_models.py  test_quality_tools.py  test_recommendations.py  test_scanner.py  test_security.py  test_testing_frameworks.py
